[project]
name = "study-material-1"
version = "0.1.0"
description = ""
authors = [
    {name = "flyingarg",email = "flyingarg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "study_material_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
